appId: com.mafia
---
- tapOn:
    id: "onboarding-nickname-input"
- inputText: "nickname"
- hideKeyboard
- tapOn:
    id: "onboarding-next-button"
